[package]
name = "hexgrid"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = [
    "precommit-hook", 
    "run-cargo-fmt",
    "run-cargo-test", 
    # modifying by hand the pre-commit hook 
    # so that clippy allow dead code
    "run-cargo-clippy",
]
