[package]
name = "hexgrid"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.16"
thiserror = "1.0.30"

[dev-dependencies]
env_logger = "0.9.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = [
    "precommit-hook", 
    "run-cargo-fmt",
    "run-cargo-test", 
    # modifying by hand the pre-commit hook 
    # so that clippy allow dead code
    "run-cargo-clippy",
]
